# thermostat

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: avr-toolchain.cmake
common/thermostat/: protocol.h  weather_condit.h
firmware/: CMakeLists.txt
firmware/app/: CMakeLists.txt  main.c
firmware/app/include/: system_core.h  system_data_handler.h  system_display.h
firmware/app/src/: system_core.c  system_data_handler.c  system_display.c  system_temperature.c
firmware/include/: config.h  thermistor.h  uart.h
firmware/include/app/: state_home.h  state_login.h  system_core.h  system_data_handler.h  system_display.h  system_temperature.h
firmware/include/drivers/: bit_utils.h  board_config.h  lcd.h  thermistor.h  uart.h
firmware/include/firmware/: keypad.h  lcd.h  sys_core.h  system_core.h  thermistor.h  uart.h
firmware/include/firmware/common/: bit_utils.h
firmware/include/lcd/: lcd.h
firmware/include/logic/: lcd_mgr.h  protocol.h  therm_mgr.h  uart_mgr.h
firmware/include/uart/: uart.h
firmware/modules/lcd/: CMakeLists.txt
firmware/modules/lcd/src/: lcd_mgr.c
firmware/modules/lcd/tests/: test_lcd_driver.c  test_lcd_mgr.c
firmware/modules/thermistor/: CMakeLists.txt
firmware/modules/thermistor/src/: therm_hal.h  therm_mgr.c
firmware/modules/uart/: CMakeLists.txt
firmware/modules/uart/src/: uart_hal.c  uart_mgr.c
firmware/src/: main.c  thermistor.c  uart.c
firmware/src/app/: CMakeLists.txt  state_home.c  state_home.h  state_login.c  state_login.h  state_stats.c  state_stats.h  states.h  strings.c  strings.h  sys_core.c  system_core.c  system_data_handler.c  system_display.c  system_temperature.c
firmware/src/drivers/: lcd.c  thermistor.c  uart.c
firmware/src/keypad/: CMakeLists.txt  keypad.c  keypad_hal.c  keypad_hal.h  keypad_mgr.c
firmware/src/keypad/tests/: test_keypad_driver.c
firmware/src/lcd/: CMakeLists.txt  lcd.c  lcd_hal.c  lcd_hal.h  lcd_mgr.c
firmware/src/logic/: lcd_mgr.c  therm_mgr.c  uart_mgr.c
firmware/src/thermistor/: CMakeLists.txt  therm_hal.c  therm_hal.h  therm_mgr.c  thermistor.c
firmware/src/uart/: CMakeLists.txt  uart.c  uart_hal.c  uart_hal.h  uart_mgr.c
firmware/tests/: CMakeLists.txt
firmware/tests/drivers/: test_lcd_driver.c
firmware/tests/logic/: test_lcd_mgr.c
host/: CMakeLists.txt
host/app/: CMakeLists.txt
host/app/src/: main.c  system_core.c  system_data_handler.c  system_data_receiver.c
host/include/: analysis.h
host/include/app/: system_core.h  system_data_handler.h  system_data_receiver.h
host/include/host/: analysis.h  file_mgr.h  file_utils.h  network.h  port.h  sys_core.h  system_core.h  weather.h  weather_client.h
host/include/host/common/: file_errors.h  port_errors.h  tsys_errors.h
host/include/logic/: port_mgr.h  storage_mgr.h
host/include/services/: file_utils.h  port.h
host/modules/analysis/: CMakeLists.txt
host/modules/analysis/src/: analysis.c
host/modules/port/: CMakeLists.txt
host/modules/port/src/: port_hal.h  port_mgr.c
host/modules/storage/: CMakeLists.txt
host/modules/storage/src/: file_utils.c  storage_mgr.c
host/modules/storage/tests/: test_file_utils.c  test_storage_mgr.c
host/src/: analysis.c  file_utils.c  main.c  port.c
host/src/analysis/: CMakeLists.txt  analysis.c
host/src/app/: CMakeLists.txt  session.c  session.h  state_home.c  state_home.h  state_login.c  state_login.h  state_stats.c  state_stats.h  sys_core.c  sys_utils.c  sys_utils.h  system_core.c  system_data_handler.c  system_data_receiver.c  weather_client.c  weather_client.h
host/src/fileio/: CMakeLists.txt  file_mgr.c  file_utils.c  file_utils.h
host/src/logic/: analysis.c  port_mgr.c  storage_mgr.c
host/src/network/: CMakeLists.txt  network.c  test_http.c
host/src/port/: CMakeLists.txt  port.c  port_hal.c  port_hal.h  port_mgr.c
host/src/services/: file_utils.c  port.c
host/src/storage/: CMakeLists.txt  file_utils.c  file_utils.h  storage_mgr.c
host/src/weather/: CMakeLists.txt  cJSON.c  cJSON.h  test_weather.c  weather.c
host/test/: data.txt  test_file_utils.c
host/test/logic/: test_analysis.c
host/tests/: CMakeLists.txt
host/tests/app/: test_system_data_receiver.c
host/tests/logic/: test_analysis.c  test_storage_mgr.c
host/tests/services/: test_file_utils.c
